--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
     "@types/jest": "24.0.20",
     "@types/node": "12.11.7",
-    "@types/react": "16.9.11",
+    "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
+    "babel": "^6.23.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
